--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "express": "^4.18.2",
     "md5": "^2.3.0",
     "moment": "^2.29.4",
-    "mongoose": "^7.2.2",
-    "socket.io": "^4.6.2"
+    "mongoose": "^7.2.2"
   }
 }
